--- a/templates/random.html
+++ b/templates/random.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" type="text/css" href="/static/css/style.css">
 </head>
 <body>
-    <div class="container d-flex justify-content-center align-items-center bg-image">
+    <div id="crocodile" class="container d-flex justify-content-center align-items-center bg-image">
 		<div class="text-center from-top">
             <div id="display" class="text-light push-64">
                 click a tooth
@@ -31,8 +31,6 @@
                     {{ i }}</button>
             {% endfor %}
         </div>
-    </div>
-    <div id="background-image-container" class="container d-flex justify-content-center align-items-center bg-image1">
     </div>
     <script src="/static/app.js"></script>
 </body>
